Se añaden los ajustes necesarios en back y BBDD para gestionar el dibujado de las gráficas
